Still structuring the page layout

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     .omelette {
                   width: 80%;
-                  border-radius: 5%;
+                  /* border-radius: 5%; */
 
     }
   </style>
@@ -34,7 +34,7 @@
 <div class="container">
      <div class="col meal">
         <div class="row">
-              <img src="/assets/images/image-omelette.jpeg" alt="Omelette meal" class="img-fluid card-img omelette">
+              <img src="/assets/images/image-omelette.jpeg" alt="Omelette meal" class="img-fluid rounded-4 card-img omelette">
         </div>
      </div>
     <div class="col">
@@ -47,11 +47,13 @@
       </div>
     </div>
     <div class="col">
-      <div class="row">
-        <h3 class="heading-3">Preparation time</h3>
-        Total: Approximately 10 minutes
-        Preparation: 5 minutes
-        Cooking: 5 minutes
+      <div class="row alert alert-danger">
+        <h3 class="heading-3 "><b>Preparation time</b></h3>
+        <ul>
+          <li>Total: Approximately 10 minutes</li>
+          Preparation: 5 minutes
+          Cooking: 5 minutes
+        </ul>
       </div>
     </div>
   
